--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "bakelite-bot",
   "version": "1.0.0",
+  "description": "Bakelite Federation Bot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.64.0",
-    "express": "^4.18.2"
+    "telegraf": "^4.16.3"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "18.x"
   }
 }
