--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "bakelite-bot",
-  "version": "1.0.0",
-  "description": "Bakelite Federation Bot",
+  "version": "6.2.0",
+  "description": "Bakelite Federation Bot with MongoDB Cloud Integration",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "mongoose": "^7.6.3"
   },
   "engines": {
     "node": "18.x"
